prodMetadata/src/objects/Travel_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Travel Plans</relationshipLabel>
        <relationshipName>Travel_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_Location__c</fullName>
        <label>From Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_State__c</fullName>
        <label>From State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Date__c</fullName>
        <label>Return Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Return_Time__c</fullName>
        <label>Return Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <label>To Location</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_State__c</fullName>
        <label>To State</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Travel Plan</label>
    <nameField>
        <label>Travel Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>